<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/gray600"
                android:padding="10dp">
    <TextView
            android:text="@string/app_name"
            android:layout_width="394dp"
            android:layout_height="60dp"
            android:id="@+id/tv_main_toolbar"
            android:gravity="center_vertical"
            android:paddingStart="12dp"
            android:elevation="20dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/black"
            android:textSize="18sp"/>
    
    <Button
            android:text="@string/saveInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_main_save_information"
            android:background="@drawable/background_button_primary"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
    />
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/btn_main_save_information"
                android:layout_below="@id/tv_main_toolbar">
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
                                                           android:layout_height="wrap_content">
            <CheckBox
                    android:text="@string/uiDesign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox2"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox"
                    android:minHeight="48dp"/>
            <CheckBox
                    android:text="@string/deepLearning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox3"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox2"
                    android:minHeight="48dp"/>
            <Button
                    android:text="@string/viewWebsite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/viewWebSiteButton"
                    android:background="@drawable/background_button_secondary"
                    app:layout_constraintStart_toEndOf="@+id/btn_main_edit_profile"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/btn_main_edit_profile"
                    android:textColor="@color/black" android:layout_marginEnd="16dp"/>
            <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/profile_image"
                    android:src="@drawable/profile_image"
                    android:id="@+id/imageView"
                    android:textColor="@color/white"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:contentDescription="@string/profile_image_desc"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="24dp"/>
            <Button
                    android:text="@string/editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_main_edit_profile"
                    android:background="@drawable/background_button_primary"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/viewWebSiteButton"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/tv_main_fullName"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/white"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_main_fullName"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    android:layout_marginTop="12dp"
                    tools:text="TextView"
                    android:textColor="@color/black"/>
            <TextView
                    android:text="@string/skills"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/btn_main_edit_profile"
                    android:layout_marginTop="32dp"
                    android:textColor="@color/gray600"/>
            <androidx.constraintlayout.widget.Guideline android:layout_width="wrap_content"
                                                        android:layout_height="wrap_content"
                                                        android:id="@+id/guideline2"
                                                        app:layout_constraintGuide_begin="25dp"
                                                        android:orientation="vertical"/>
            <CheckBox
                    android:text="@string/main_android_development"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBox"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"/>
            <TextView
                    android:text="@string/provinceCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/checkBox3"
                    android:layout_marginTop="32dp"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"/>
            <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toBottomOf="@+id/textView3"
                    android:layout_marginTop="8dp">
                <RadioButton
                        android:text="@string/tehran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:minHeight="48dp"/>
                <RadioButton
                        android:text="@string/gilanRasht"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton3"
                        app:layout_constraintTop_toBottomOf="@+id/radioButton"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:minHeight="48dp"/>
                <RadioButton
                        android:text="@string/alborzKaraj"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/radioButton4"
                        app:layout_constraintTop_toBottomOf="@+id/radioButton3"
                        app:layout_constraintStart_toStartOf="@+id/guideline2"
                        android:minHeight="48dp"/>
            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</RelativeLayout>